[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Levels/level_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/home_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/ui_control.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/upgrade.png" type="Texture" id=6]
[ext_resource path="res://Scripts/drill_button.gd" type="Script" id=10]
[ext_resource path="res://Scenes/ore_displayer.tscn" type="PackedScene" id=11]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Game" type="Node2D"]

[node name="Main" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Level 1" parent="Main" instance=ExtResource( 3 )]

[node name="Player" parent="Main" instance=ExtResource( 1 )]
position = Vector2( -127, 242 )

[node name="Light2D" type="Light2D" parent="Main"]
visible = false
position = Vector2( 58, 293 )
texture = ExtResource( 6 )

[node name="UI_Control" type="Control" parent="."]
margin_left = -2.0
margin_top = 1.0
margin_right = 178.0
margin_bottom = 321.0
rect_min_size = Vector2( 180, 320 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI_Control"]

[node name="HomeMenu" parent="UI_Control/CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="OreDisplayer" parent="UI_Control/CanvasLayer" instance=ExtResource( 11 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -77.0
margin_top = 4.0
margin_right = 75.0
margin_bottom = 20.0

[node name="Mine_Button" type="Button" parent="UI_Control/CanvasLayer"]
visible = false
margin_left = 118.0
margin_top = 176.0
margin_right = 162.0
margin_bottom = 196.0
shortcut = SubResource( 2 )
text = "Mine"

[node name="Drill_Button" type="Button" parent="UI_Control/CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = 16.0
margin_right = -35.0
margin_bottom = 36.0
text = "Drill"
script = ExtResource( 10 )

[node name="ProgressBar" type="ProgressBar" parent="UI_Control/CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -4.0
margin_right = 42.0
margin_bottom = 10.0
max_value = 5.0
value = 5.0

[node name="Fuel" type="ProgressBar" parent="UI_Control/CanvasLayer"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_right = 50.0
rect_min_size = Vector2( 50, 15 )

[connection signal="button_down" from="UI_Control/CanvasLayer/Mine_Button" to="Main" method="_on_Mine_Button_button_down"]
[connection signal="button_down" from="UI_Control/CanvasLayer/Drill_Button" to="Main" method="_on_Drill_Button_button_down"]
